<resources>
    <string name="app_name">Track Rider</string>
    <string name="tr_hint_username">Username</string>
    <string name="tr_hint_password">Password</string>
    <string name="tr_hint_new_password">New Password</string>
    <string name="tr_hint_confirm_new_password">Confirm New Password</string>
    <string name="tr_forgot_password">Forgot Password?</string>
    <string name="tr_login">Login</string>
    <string name="tr_new_user">New User? Sign up</string>
    <string name="tr_email">Email Address</string>
    <string name="tr_button_submit">Submit</string>
    <string name="tr_button_cancel">Cancel</string>
    <string name="tr_enter_code">Enter Code</string>
    <string name="tr_test_activity">Test Activity</string>
    <string name="tr_log_out">Log Out</string>

    <string name="tr_home">Home</string>
    <string name="tr_create_room">Create Room</string>
    <string name="tr_show_rooms">Show Rooms</string>
    <string name="tr_friends">Friends</string>
    <string name="tr_people">People</string>
    <string name="tr_show_request">Show Requests</string>
    <string name="tr_history">History</string>
    <string name="tr_requests">Requests</string>

    <string name="tr_enter_email">Enter Email</string>
    <string name="tr_img_user_image">User Image</string>
    <string name="title_activity_tracking">Map</string>

    <string name="tr_subtext_1">Add, Track &amp; Ride with your</string>
    <string name="tr_subtext_2">Riding Group</string>
</resources>
