<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseLoginType2Activity"
    android:background="@color/colorPrimary"
    android:id="@+id/tr_choose_login_type"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp">

        //App Logo
        <ImageView
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/tr_logo"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"/>

        //App Name
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:layout_marginBottom="70dp"
            android:textColor="@color/colorLoginPage"/>


        <TextView
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:textColor="@color/colorLoginSubtext"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tr_subtext_1"/>

        <TextView
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:textColor="@color/colorLoginSubtext"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tr_subtext_2"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_marginTop="90dp"
            android:text="@string/tr_login"
            android:layout_gravity="center_horizontal"
            android:layout_width="130dp"
            android:layout_height="50dp" />

    </LinearLayout>
</ScrollView>