<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        //App Logo
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/tr_logo"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="16dp"/>

        //App Name
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginBottom="80dp"
            android:textColor="@color/colorAccent"/>

        //Username
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tr_hint_username"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>


        //Email
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tr_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>

        //Password
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tr_hint_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            //Submit
            <android.support.design.button.MaterialButton
                android:id="@+id/submit_button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/tr_button_submit" />

            //Cancel
            <android.support.design.button.MaterialButton
                android:id="@+id/btn_cancel_signup"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/submit_button_signup"
                android:layout_toLeftOf="@id/submit_button_signup"
                android:text="@string/tr_button_cancel" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>